--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,6 @@ h1 {
 
 }
 
-header h1 {
-    margin: 0;
-    font-size: 2.5em;
-    font-family: 'Arial', sans-serif;
-}
-
-
 nav {
     margin: 20px 0;
 }
@@ -50,6 +43,7 @@ section {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 20px 0;
     padding: 20px;
+    width: 100%;
 }
 footer {
     text-align: center;
@@ -62,13 +56,13 @@ footer {
 }
 
 .game img {
-    transition: opacity 0.3s ease; /* Transición suave */
+    transition: opacity 0.3s ease; 
     border-radius: 25px;
     box-shadow: 1px 1px 25px black;
 }
 
 .game img:hover {
-    opacity: 0.7; /* Cambia la opacidad al pasar el cursor */
+    opacity: 0.7; 
 }
 
 #games-container {
@@ -127,10 +121,10 @@ h1 {
 
 h2 {
     text-align: center;
-    color: red;
+
 }
 
-h3{
+.h3comic{
     text-align: center;
 }
 
@@ -244,14 +238,14 @@ h3{
 
 @media (max-width: 768px) {
     .game {
-        flex: 1 1 45%; 
+        flex: 1 1 45%;
     }
 }
 
 /* Media query para móviles (480px y menos) */
 @media (max-width: 480px) {
     .game {
-        flex: 1 1 100%; 
+        flex: 1 1 100%;
     }
 }
 
@@ -282,6 +276,31 @@ h3{
     }
 }
 
+/* más headers */
+@media only screen and (max-width: 600px) {
+    /* No styles applied */
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    /* No styles applied */
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    /* No styles applied */
+  } 
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    /* No styles applied */
+  } 
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    /* No styles applied */
+  }
+
 
 
 #insta {
@@ -309,3 +328,111 @@ h3{
     gap: 3px;
 }
 
+/* Parte del formulario */
+
+.container {
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    padding: 30px;
+    margin-top: 50px;
+    transition: transform 0.3s;
+}
+
+.container:hover {
+    transform: scale(1.02);
+}
+
+.formu {
+    color: #6a11cb;
+    margin-bottom: 20px;
+}
+
+.form-label {
+    font-weight: bold;
+    color: #333;
+}
+
+.form-control {
+    border-radius: 5px;
+    border: 1px solid #6a11cb;
+}
+
+.form-control:focus {
+    border-color: #2575fc;
+    box-shadow: 0 0 5px rgba(37, 117, 252, 0.5);
+}
+
+.btn-primary {
+    background-color: #6a11cb;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.btn-primary:hover {
+    background-color: #2575fc;
+    transform: translateY(-2px);
+}
+
+.footer-text {
+    text-align: center;
+    margin-top: 20px;
+    color: #fff;
+}
+
+/* termina el formulario */
+
+span {
+    color: red;
+    visibility: hidden;
+}
+
+/* personalizamos el formulario del CRUD */
+#videogames-register {
+    background-color: #f9f9f9; 
+    padding: 20px; 
+    border-radius: 8px; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px; 
+    
+}
+
+#videogames-register label {
+    display: block; 
+    margin-bottom: 8px;
+    font-weight: bold; 
+}
+
+#videogames-register input[type="text"],
+#videogames-register input[type="submit"],
+#videogames-register select {
+    width: 100%; 
+    padding: 10px; 
+    margin-bottom: 15px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    transition: border-color 0.3s; 
+}
+
+#videogames-register input[type="text"]:focus,
+#videogames-register select:focus {
+    border-color: #007bff;
+    outline: none; 
+}
+
+#videogames-register button[type="submit"] {
+    background-color: #007bff; 
+    color: white; 
+    border: none; 
+    padding: 10px 15px;
+    border-radius: 4px; 
+    cursor: pointer; 
+    font-size: 16px; 
+    transition: background-color 0.3s; 
+}
+
+#videogames-register button[type="submit"]:hover {
+    background-color: #0056b3; 
+}
